Modified missions TYpe

--- a/templates/missions/show.html.twig
+++ b/templates/missions/show.html.twig
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <th>Country</th>
-                <td>{{ mission.country }}</td>
+                <td>{{ mission.country|join${('optional')}}}</td>
             </tr>
             <tr>
                 <th>Skills</th>
