--- a/templates/missions/show.html.twig
+++ b/templates/missions/show.html.twig
@@ -27,6 +27,7 @@
                 <th>Type</th>
                 <td>{{ mission.type }}</td>
             </tr>
+           
             <tr>
                 <th>StartDate</th>
                 <td>{{ mission.startDate ? mission.startDate|date('Y-m-d H:i:s') : '' }}</td>
@@ -41,11 +42,11 @@
             </tr>
             <tr>
                 <th>Country</th>
-                <td>{{ mission.country|join${('optional')}}}</td>
+                <td>{{ mission.country}}</td>
             </tr>
             <tr>
                 <th>Skills</th>
-                <td>{{ mission.skills ? mission.skills|join(', ') : '' }}</td>
+                <td>{{ mission.skills }}</td>
             </tr>
         </tbody>
     </table>
