--- a/templates/missions/edit.html.twig
+++ b/templates/missions/edit.html.twig
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-
-<title>Edit Missions</title>
-
+{% extends "layouts/base.html.twig" %}
 {% block body %}
     <h1>Edit Missions</h1>
 
