--- a/templates/missions/index.html.twig
+++ b/templates/missions/index.html.twig
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-
-<title>Missions index</title>
-
+{% extends "layouts/base.html.twig" %}
 {% block body %}
     <h1>Missions index</h1>
 
