--- a/templates/missions/new.html.twig
+++ b/templates/missions/new.html.twig
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-
-<title>New Missions</title>
+{% extends "layouts/base.html.twig" %}
 
 {% block body %}
     <h1>Create new Missions</h1>
