--- a/templates/missions/show.html.twig
+++ b/templates/missions/show.html.twig
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
 
-<title>Missions</title>
+{% extends "layouts/base.html.twig" %}
+
 
 {% block body %}
+
     <h1>Missions</h1>
 
     <table class="table">
