--- a/templates/agents/_delete_form.html.twig
+++ b/templates/agents/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('agents_delete', {'id': agent.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form class="pt-2" method="post" action="{{ path('agents_delete', {'id': agent.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ agent.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger rounded ">Delete</button>
 </form>
