--- a/templates/agents/new.html.twig
+++ b/templates/agents/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('agents/_form.html.twig') }}
 
-    <a href="{{ path('agents_index') }}">back to list</a>
+    <a href="{{ path('agents_index') }}"><button class="btn btn-warning">back to list</button></a>
 {% endblock %}
