--- a/templates/agents/show.html.twig
+++ b/templates/agents/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Agents</h1>
 
-    <table class="table">
+    <table class="table table-striped table-bordered border-dark">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -20,6 +20,10 @@
             <tr>
                 <th>CodeName</th>
                 <td>{{ agent.codeName }}</td>
+            </tr>
+            <tr>
+                <th>BirthDate</th>
+                <td>{{ agent.dateOfBirth | date('d-m-Y')}}</td>
             </tr>
             <tr>
                 <th>Skills</th>
