--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -15,6 +15,9 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container py-5">
+            {% block body %}{% endblock %}
+        </div>
+        
     </body>
 </html>
