--- a/templates/missions/show.html.twig
+++ b/templates/missions/show.html.twig
@@ -6,7 +6,7 @@
 
     <h1>Missions</h1>
 
-    <table class="table">
+    <table class="table table-striped table-bordered border-dark">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -60,6 +60,7 @@
                 <th>EndDate</th>
                 <td>{{ mission.endDate ? mission.endDate|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
+            
 
             <tr>
                 <th>Status</th>
