--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container py-5">
+        <div class="container py-5 px-5">
             {% block body %}{% endblock %}
         </div>
         
