Modified hideouts twig with layout/base

--- a/templates/hide_outs/edit.html.twig
+++ b/templates/hide_outs/edit.html.twig
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+{% extends "layouts/base.html.twig" %}
 
-<title>Edit HideOuts</title>
 
 {% block body %}
     <h1>Edit HideOuts</h1>
