--- a/templates/hide_outs/index.html.twig
+++ b/templates/hide_outs/index.html.twig
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+{% extends "layouts/base.html.twig" %}
 
-<title>HideOuts index</title>
 
 {% block body %}
     <h1>HideOuts index</h1>
