--- a/templates/hide_outs/new.html.twig
+++ b/templates/hide_outs/new.html.twig
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+{% extends "layouts/base.html.twig" %}
 
-<title>New HideOuts</title>
 
 {% block body %}
     <h1>Create new HideOuts</h1>
