--- a/templates/hide_outs/_delete_form.html.twig
+++ b/templates/hide_outs/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('hide_outs_delete', {'id': hide_out.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ hide_out.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-warning">Delete</button>
 </form>
