Modified MissionsType form and missions/show template

--- a/templates/missions/show.html.twig
+++ b/templates/missions/show.html.twig
@@ -37,6 +37,12 @@
                 </td>
             </tr>
             <tr>
+                <th>Planques</th>
+                <td>
+                     {{ mission.hideOut.type }}
+                </td>
+            </tr>
+            <tr>
                 <th>Targets</th>
                 <td>
                     {% for targets in mission.targets %}
