--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -15,9 +15,44 @@
         {% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#" aria-current="page">Missions</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Agents</a></li>
+                      <li><a class="dropdown-item" href="#">Contacts</a></li>
+                      <li><a class="dropdown-item" href="#">Cibles</a></li>
+                      <li><a class="dropdown-item" href="#">Planques</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <ul class="d-flex">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Login</a>
+                    </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         <div class="container py-5 px-5">
-            {% block body %}{% endblock %}
+            {% block body %}
+            
+            {% endblock %}
         </div>
-        
+        <footer class="footer mt-auto py-3 bg-dark fixed-bottom">
+           <p style="color: aliceblue; text-align: center;">Copyright 2021 | Dévellopé par Bruno Richard</p> 
+        </footer>
     </body>
 </html>
