--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -17,24 +17,24 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href=" {{ path('missions_index')}} ">KGB</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="#" aria-current="page">Missions</a>
+                    <a class="nav-link" href="{{ path('missions_index')}}" aria-current="page">Missions</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Dropdown
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Agents</a></li>
-                      <li><a class="dropdown-item" href="#">Contacts</a></li>
-                      <li><a class="dropdown-item" href="#">Cibles</a></li>
-                      <li><a class="dropdown-item" href="#">Planques</a></li>
+                      <li><a class="dropdown-item" href="{{ path('agents_index') }}">Agents</a></li>
+                      <li><a class="dropdown-item" href="{{ path('contacts_index') }}">Contacts</a></li>
+                      <li><a class="dropdown-item" href="{{ path('targets_index') }}">Cibles</a></li>
+                      <li><a class="dropdown-item" href="{{ path('hide_outs_index') }}">Planques</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -46,7 +46,8 @@
               </div>
             </div>
           </nav>
-        <div class="container py-5 px-5">
+         
+        <div class="container mt-5 py-5 px-5">
             {% block body %}
             
             {% endblock %}
