--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -40,7 +40,8 @@
                 </ul>
                 <ul class="d-flex">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Login</a>
+                        <a class="nav-link" href=" {{path('app_register')}}">Register</a>
+                        <a class="nav-link active" aria-current="page" href=" {{ path('app_login')}} ">Login</a>
                     </li>
                 </ul>
               </div>
