--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -40,8 +40,12 @@
                 </ul>
                 <ul class="d-flex">
                     <li class="nav-item">
-                        <a class="nav-link" href=" {{path('app_register')}}">Register</a>
-                        <a class="nav-link active" aria-current="page" href=" {{ path('app_login')}} ">Login</a>
+                      {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a class="nav-link" href=" {{path('app_logout')}}"><button class="btn btn-warning">Log out</button></a>
+                      {% else %}
+                        <a class="nav-link" href=" {{path('app_register')}}"><button class="btn btn-primary">Register</button></a>
+                        <a class="nav-link active" aria-current="page" href=" {{ path('app_login')}} "><button class="btn btn-success">Login</button></a>
+                      {% endif %}
                     </li>
                 </ul>
               </div>
