--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
             <div class="container-fluid">
               <a class="navbar-brand" href=" {{ path('missions_index')}} ">KGB</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,6 @@
               </div>
             </div>
           </nav>
-         
         <div class="container mt-5 py-5 px-5">
             {% block body %}
             
@@ -61,4 +60,5 @@
            <p style="color: aliceblue; text-align: center;">Copyright 2021 | Dévellopé par Bruno Richard</p> 
         </footer>
     </body>
+  
 </html>
