--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -40,7 +40,7 @@
                 </ul>
                 <ul class="d-flex">
                     <li class="nav-item">
-                      {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                      {% if is_granted('ROLE_ADMIN') %}
                         <a class="nav-link" href=" {{path('app_logout')}}"><button class="btn btn-warning">Log out</button></a>
                       {% else %}
                         <a class="nav-link active" aria-current="page" href=" {{ path('app_login')}} "><button class="btn btn-success">Login</button></a>
