--- a/templates/missions/index.html.twig
+++ b/templates/missions/index.html.twig
@@ -32,8 +32,10 @@
                 <td>{{ mission.country }}</td>
                 <td>{{ mission.skills ? mission.skills|join(', ') : '' }}</td>
                 <td>
-                    <a href="{{ path('missions_show', {'id': mission.id}) }}">show</a>
-                    <a href="{{ path('missions_edit', {'id': mission.id}) }}">edit</a>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('missions_show', {'id': mission.id}) }}">show</a>
+                        <a href="{{ path('missions_edit', {'id': mission.id}) }}">edit</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -43,6 +45,7 @@
         {% endfor %}
         </tbody>
     </table>
-
+    {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('missions_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
